--- a/sass/pages/_construction.scss
+++ b/sass/pages/_construction.scss
@@ -2,7 +2,7 @@
 SITIO EN CONSTRUCCIÓN
 =============================== */
 body.page-construction{
-  background:url("../img/bggpadel.png") center center no-repeat;
+  background:url("../img/bggpadel.webp") center center no-repeat;
   background-size:cover;
 }
 .page-construction main{ flex-grow:1; }
