--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,7 +2,7 @@
 HOME: HERO + SECCIONES
 =============================== */
 .gp-hero{
-  background:var(--gp-blue-dark) url("../img/bggpadel.png") center center no-repeat;
+  background:var(--gp-blue-dark) url("../img/bggpadel.webp") center center no-repeat;
   background-size:cover;
   color:var(--gp-white);
 }
