--- a/sass/pages/_score.scss
+++ b/sass/pages/_score.scss
@@ -5,7 +5,7 @@ PÁGINAS: HERO GENÉRICO + SCORE TYPE
   width:100%;
   margin:0;
   padding:40px 0 40px;
-  background:var(--gp-blue-dark) url("../img/bggpadel.png") center center no-repeat;
+  background:var(--gp-blue-dark) url("../img/bggpadel.webp") center center no-repeat;
   background-size:cover;
   display:flex;
   flex-direction:column;
